Added files via upload

--- a/src/CronAulasMPEs/app/pages/page1/page1.html
+++ b/src/CronAulasMPEs/app/pages/page1/page1.html
@@ -1,15 +1,13 @@
 <ion-navbar *navbar>
-  <ion-title>Tab 1</ion-title>
+  <ion-title>Home</ion-title>
 </ion-navbar>
 
 <ion-content padding class="page1">
-  <h2>Welcome to Ionic!</h2>
+  <h2>AGENDA - MPES IMD/UFRN</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    Este projeto utiliza o framework ionic 2 hoje versão beta. Objetiva informar alunos e membros da coordenação do MPES a agenda do curso durante o peridodo 2016.1.
   </p>
   <p>
-    Take a look at the <code>app/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+      Criado por: Yan Justino e Paulo Machado
   </p>
 </ion-content>
